style: fix linux foundation svg on mobile

--- a/layouts/css/page-modules/_linuxfoundation.styl
+++ b/layouts/css/page-modules/_linuxfoundation.styl
@@ -19,3 +19,9 @@
     width 100%
     max-width 420px
     text-indent -9000px
+
+@media screen and (max-width: 480px)
+    .linuxfoundation-logo
+        background-position 0px
+        background-size 320px
+        margin-left -5px
